Changed index.html and style.css added display grid to left part

--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
 #left_part
 {
   flex-grow: 2;
-  display: flex;
+  display: grid;
+  grid-template-columns: 20px auto 20px;
 }
 
 #middle_part
@@ -17,17 +18,4 @@
 #right_part
 {
   flex-grow: 3;
-}
-
-#browse{
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-}
-
-
-#your_photo
-{
-  background-color: : green;
-  flex-basis: 19px;
 }
