--- a/style.css
+++ b/style.css
@@ -11,8 +11,6 @@
 #left_part
 {
   flex-grow: 2;
-  display: grid;
-  grid-template-columns: 30px auto 30px;
   background-color: rgb(162, 218, 235);
 }
 
@@ -34,8 +32,6 @@
 
 #list_of_tasks
 {
-  display: grid;
-  grid-template-columns: 30px auto;
   background-color: rgb(246, 174, 34);
 }
 
@@ -57,4 +53,16 @@
 #right_part
 {
   background-color:rgb(255, 238, 112);
+}
+
+.elements_from_left_part
+{
+  display:grid;
+  grid-template-columns: 30px auto 30px;
+}
+
+.elements_from_middle_part
+{
+  display: grid;
+  grid-template-columns: 30px auto;
 }
